crates/test-files/fixtures/compile_errors/invalid_struct_pub_qualifier.fe
pub struct Bar {
    pub x: i32
pub}
